# syde671_final_project

./: README.md  depth_prediction_test.py  transform_prediction_test.py
example_model/: README.md
mask_generation/: annotator.m
odom_results/: 09_odom_ground_truth.txt  d1_odometry_09-image_2.txt  paper_results.txt  read_odom.py
optical_flow_testing/: flow.py  pyproject.toml
struct2depth/: gen_kitti_data.py  gen_kitti_data_mask.py
