[tool.poetry]
name = "syde671finalproject"
version = "0.1.0"
description = "Final project code i.e. utilities etc. for Adv. Image Processing course"
authors = ["Sepehr Ghavam"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.1"
numpy = "^1.17"
scipy = "^1.3"
scikit-image = "^0.16.2"
plotly = "^4.4"

[tool.poetry.dev-dependencies]
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
